Added pages for Movie times, and cinemas

--- a/src/CineplexMovieComplex/Views/Shared/_Layout.cshtml
+++ b/src/CineplexMovieComplex/Views/Shared/_Layout.cshtml
@@ -34,6 +34,8 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="Movies" asp-action="Index">Movies</a></li>
+                    <li><a asp-area="" asp-controller="Cineplexes" asp-action="Index">Cinemas</a></li>
+                    <li><a asp-area="" asp-controller="CineplexMovies" asp-action="Index">Sessions</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
