--- a/src/CineplexMovieComplex/Views/Home/Index.cshtml
+++ b/src/CineplexMovieComplex/Views/Home/Index.cshtml
@@ -65,6 +65,18 @@
     </a>
 </div>
 
+<h1> ABC Cineplex Corp. </h1>
+<p> ABC Cineplex Corp. has been operating for over 20 years, providing customers with high quality service and movies to enjoy. <br />
+    <h3>Cineplexes</h3>
+    We offer a variety of movies and facilities to accomodate for the many tastes that come through our theatres. <br />
+    Over the last 20 years we have refined our facilities and theatres. <br />
+    In 2005, we opened our <a href="~/Cineplexes/Details/3">Melbourne CBD</a>, <a href="~/Cineplexes/Details/4">Sunshine</a>, and <a href="~/Cineplexes/Details/5">Lilydale</a> locations, boasting twenty plush, comfortable recliners, and arguably the most enjoyable viewing experience possible. <br />
+    <h3>Events</h3>
+    In addition to our theatres we also have facilities to cater for functions at a number of our complexes. <br />
+    Please see our <a asp-area="" asp-controller="Events" asp-action="Index">Events</a> page if you would like to see what we have to offer.
+</p>
+
+<!--
 <div class="row">
     <div class="col-md-3">
         <h2>Application uses</h2>
@@ -107,3 +119,4 @@
         </ul>
     </div>
 </div>
+-->
