--- a/src/CineplexMovieComplex/Views/Movies/Index.cshtml
+++ b/src/CineplexMovieComplex/Views/Movies/Index.cshtml
@@ -1,31 +1,22 @@
 @model IEnumerable<CineplexMovieComplex.Models.Movie>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Currently Screening Movies";
 }
 
-<h2>Index</h2>
+<h2>Currently Screening Movies</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.ImageUrl)
+                Poster
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.LongDescription)
+                Movie Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ShortDescription)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Title)
+                Description
             </th>
             <th></th>
         </tr>
@@ -37,21 +28,13 @@
                 @Html.DisplayFor(modelItem => item.ImageUrl)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.LongDescription)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
+                @Html.DisplayFor(modelItem => item.Title)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ShortDescription)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.MovieId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.MovieId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.MovieId">Delete</a>
+                <a asp-action="Details" asp-route-id="@item.MovieId">Details</a>
             </td>
         </tr>
 }
