--- a/src/CineplexMovieComplex/Views/Shared/_Layout.cshtml
+++ b/src/CineplexMovieComplex/Views/Shared/_Layout.cshtml
@@ -33,7 +33,13 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    <li><a asp-area="" asp-controller="Movies" asp-action="Index">Movies</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Movies<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a asp-area="" asp-controller="Movies" asp-action="Index">Screening</a></li>
+                            <li><a asp-area="" asp-controller="MovieComingSoons" asp-action="Index">Coming Soon!</a></li>
+                        </ul>     
+                    </li>           
                     <li><a asp-area="" asp-controller="Cineplexes" asp-action="Index">Cinemas</a></li>
                     <li><a asp-area="" asp-controller="CineplexMovies" asp-action="Index">Sessions</a></li>
                 </ul>
