--- a/src/CineplexMovieComplex/Views/CineplexMovies/Search.cshtml
+++ b/src/CineplexMovieComplex/Views/CineplexMovies/Search.cshtml
@@ -65,6 +65,9 @@
             <td>
                 <a asp-action="Details" asp-route-id="@item.CineplexMovieId">Details</a>
             </td>
+            <td>
+                <a asp-action="MakeBooking" asp-route-id="@item.CineplexMovieId">Make Booking</a>
+            </td>
         </tr>
 }
     </tbody>
