--- a/src/CineplexMovieComplex/Views/Home/Index.cshtml
+++ b/src/CineplexMovieComplex/Views/Home/Index.cshtml
@@ -73,7 +73,7 @@
     In 2005, we opened our <a href="~/Cineplexes/Details/3">Melbourne CBD</a>, <a href="~/Cineplexes/Details/4">Sunshine</a>, and <a href="~/Cineplexes/Details/5">Lilydale</a> locations, boasting twenty plush, comfortable recliners, and arguably the most enjoyable viewing experience possible. <br />
     <h3>Events</h3>
     In addition to our theatres we also have facilities to cater for functions at a number of our complexes. <br />
-    Please see our <a href="~/Events">Sunshine>Events</a> page if you would like to see what we have to offer.
+    Please see our <a href="~/Events">Events</a> page if you would like to see what we have to offer.
 </p>
 
 <!--
