--- a/src/CineplexMovieComplex/Views/Cineplexes/Details.cshtml
+++ b/src/CineplexMovieComplex/Views/Cineplexes/Details.cshtml
@@ -11,10 +11,10 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ImageUrl)
+            
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.ImageUrl)
+            <img src="@Url.Content(Html.DisplayTextFor(model => model.ImageUrl))" style="display:block; height:auto; width:auto; max-height: 500px; max-width:300px;" />
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Location)
