--- a/src/CineplexMovieComplex/Views/Events/Index.cshtml
+++ b/src/CineplexMovieComplex/Views/Events/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@*
+﻿@model CineplexMovieComplex.Models.Enquiry
+@*
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
@@ -16,6 +17,42 @@
 
 <h2>Enquiries</h2>
 <p>
-    If you wish to enquire about any aspects of our events, please fill out the form below and we will reply as soon as possible.
-    
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+        <h4>
+            If you wish to enquire about any aspects of our events, please fill out the form below and we will reply as soon as possible.
+        </h4>
+        <hr />
+        <div class="form-group">
+            @Html.LabelFor(m => m.FromName, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.FromName, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.FromName)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.FromEmail, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.FromEmail, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.FromEmail)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Message, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.Message, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Message)
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" class="btn btn-default" value="Send" />
+            </div>
+        </div>
+    }
 </p>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
