--- a/src/CineplexMovieComplex/Views/Movies/Details.cshtml
+++ b/src/CineplexMovieComplex/Views/Movies/Details.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Movie Details";
 }
+
 <h2>Movie Details</h2>
 
 <div>
@@ -10,10 +11,10 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            Poster
+            @Html.DisplayNameFor(model => model.ImageUrl)
         </dt>
         <dd>
-            <img src="@Url.Content(Html.DisplayTextFor(model => model.ImageUrl))" style="display:block; height:auto; width:auto; max-height: 500px; max-width:300px;" />
+            @Html.DisplayFor(model => model.ImageUrl)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Title)
@@ -22,7 +23,7 @@
             @Html.DisplayFor(model => model.Title)
         </dd>
         <dt>
-            Description
+            @Html.DisplayNameFor(model => model.LongDescription)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.LongDescription)
