--- a/src/CineplexMovieComplex/Views/MovieComingSoons/Index.cshtml
+++ b/src/CineplexMovieComplex/Views/MovieComingSoons/Index.cshtml
@@ -25,7 +25,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                <img src="@Url.Content(item.ImageUrl)" style="display:block; height:auto; width:auto; max-height: 300px; max-width:150px;" /> 
+                @Html.DisplayFor(modelItem => item.ImageUrl)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
