--- a/src/CineplexMovieComplex/Views/Events/Index.cshtml
+++ b/src/CineplexMovieComplex/Views/Events/Index.cshtml
@@ -32,16 +32,16 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(m => m.FromEmail, new { @class = "col-md-2 control-label" })
+            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
             <div class="col-md-10">
-                @Html.TextBoxFor(m => m.FromEmail, new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.FromEmail)
+                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Email)
             </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.Message, new { @class = "col-md-2 control-label" })
             <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Message, new { @class = "form-control" })
+                @Html.TextAreaFor(m => m.Message, new { @class = "form-control" })
                 @Html.ValidationMessageFor(m => m.Message)
             </div>
         </div>
@@ -52,7 +52,3 @@
         </div>
     }
 </p>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
