--- a/src/CineplexMovieComplex/Views/CineplexMovies/Details.cshtml
+++ b/src/CineplexMovieComplex/Views/CineplexMovies/Details.cshtml
@@ -7,20 +7,33 @@
 <h2>Movie Details</h2>
 
 <div>
-    <h4>@Html.DisplayFor(model => model.Movie.Title)</h4>
+    <h3>@Html.DisplayFor(model => model.Movie.Title)</h3>
     <hr />
     <dl class="dl-horizontal">
         <dt>
             Poster
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Movie.ImageUrl)
+            <img src="@Url.Content(@Html.DisplayTextFor(model => model.Movie.ImageUrl))" style="display:block; max-height:500px; max-width:300px; height:auto; width:auto;" />
+            <br />
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Movie.Title)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Movie.Title)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Cineplex.Location)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Cineplex.Location)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ViewingTime)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ViewingTime)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Day)
@@ -32,20 +45,11 @@
             @Html.DisplayNameFor(model => model.SeatsAvailable)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.SeatsAvailable)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ViewingTime)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ViewingTime)
+            @Html.DisplayFor(model => model.SeatsAvailable) / 20
         </dd>
     </dl>
 </div>
 <div>
-    <center>
-        <a asp-action="InitiateBooking">Book a seat!</a><br />
-    </center>
-    <br />
+    <h4><b><a asp-action="InitiateBooking">Book a seat!</a></b></h4><br />
     <a asp-action="Index">Back to List</a><br />
 </div>
