--- a/src/CineplexMovieComplex/Views/Cineplexes/Details.cshtml
+++ b/src/CineplexMovieComplex/Views/Cineplexes/Details.cshtml
@@ -7,14 +7,14 @@
 <h2>Cineplex Details</h2>
 
 <div>
-    <h4>@Html.DisplayFor(model => model.Location)</h4>
+    <h3>@Html.DisplayFor(model => model.Location)</h3>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ImageUrl)
+            
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.ImageUrl)
+            <img src="@Url.Content(@Html.DisplayTextFor(model => model.ImageUrl))" style="display:block; max-height:500px; max-width:300px; height:auto; width:auto;" />
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Location)
@@ -23,7 +23,7 @@
             @Html.DisplayFor(model => model.Location)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.LongDescription)
+            Description
         </dt>
         <dd>
             @Html.DisplayFor(model => model.LongDescription)
