Updated home page
Home page now doesn't display text beside buttons

--- a/src/CineplexMovieComplex/Views/Home/Index.cshtml
+++ b/src/CineplexMovieComplex/Views/Home/Index.cshtml
@@ -14,9 +14,8 @@
             <img src="~/images/twoBrothers.png" alt="ASP.NET" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
-                    Book us for an event today!
                     <a class="btn btn-success" href="~/Events">
-                        Learn More
+                        Find out more
                     </a>
                 </p>
             </div>
@@ -25,7 +24,6 @@
             <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
                     <a class="btn btn-success" href="http://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
                         Learn More
                     </a>
@@ -36,7 +34,6 @@
             <img src="~/images/banner3.svg" alt="Package Management" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
-                    Bring in libraries from NuGet, Bower, and npm, and automate tasks using Grunt or Gulp.
                     <a class="btn btn-success" href="http://go.microsoft.com/fwlink/?LinkID=525029&clcid=0x409">
                         Learn More
                     </a>
@@ -47,7 +44,6 @@
             <img src="~/images/banner4.svg" alt="Microsoft Azure" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
                     <a class="btn btn-success" href="http://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
                         Learn More
                     </a>
