--- a/src/CineplexMovieComplex/Views/CineplexMovies/Index.cshtml
+++ b/src/CineplexMovieComplex/Views/CineplexMovies/Index.cshtml
@@ -61,7 +61,7 @@
                 @Html.DisplayFor(modelItem => item.Day)
             </td>
             <td>
-                <a asp-action="Details" asp-route-id="@item.CineplexMovieId">Details</a>
+                <a class="btn btn-default" asp-action="Details" asp-route-id="@item.CineplexMovieId">Details</a>
             </td>
         </tr>
 }
