--- a/src/CineplexMovieComplex/Views/Home/Index.cshtml
+++ b/src/CineplexMovieComplex/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <ol class="carousel-indicators">
+    <ol class="carousel-indicators" style="margin-bottom:-10px;">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
@@ -12,9 +12,9 @@
     <div class="carousel-inner" role="listbox">
         <div class="item active">
             <img src="~/images/twoBrothers.png" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
+            <div class="carousel-caption" role="option" style="margin-bottom:-20px;">
                 <p>
-                    <a class="btn btn-success" href="~/Events">
+                    <a class="btn btn-success" href="~/Movies/">
                         Find out more
                     </a>
                 </p>
@@ -22,7 +22,7 @@
         </div>
         <div class="item">
             <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
+            <div class="carousel-caption" role="option" style="margin-bottom:-20px;">
                 <p>
                     <a class="btn btn-success" href="http://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
                         Learn More
@@ -32,7 +32,7 @@
         </div>
         <div class="item">
             <img src="~/images/banner3.svg" alt="Package Management" class="img-responsive" />
-            <div class="carousel-caption" role="option">
+            <div class="carousel-caption" role="option" style="margin-bottom:-20px;">
                 <p>
                     <a class="btn btn-success" href="http://go.microsoft.com/fwlink/?LinkID=525029&clcid=0x409">
                         Learn More
@@ -42,7 +42,7 @@
         </div>
         <div class="item">
             <img src="~/images/banner4.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
+            <div class="carousel-caption" role="option" style="margin-bottom:-20px;">
                 <p>
                     <a class="btn btn-success" href="http://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
                         Learn More
@@ -69,7 +69,7 @@
     In 2005, we opened our <a href="~/Cineplexes/Details/3">Melbourne CBD</a>, <a href="~/Cineplexes/Details/4">Sunshine</a>, and <a href="~/Cineplexes/Details/5">Lilydale</a> locations, boasting twenty plush, comfortable recliners, and arguably the most enjoyable viewing experience possible. <br />
     <h3>Events</h3>
     In addition to our theatres we also have facilities to cater for functions at a number of our complexes. <br />
-    Please see our <a href="~/Events">Sunshine>Events</a> page if you would like to see what we have to offer.
+    Please see our <a href="~/Events">Events</a> page if you would like to see what we have to offer.
 </p>
 
 <!--
