--- a/src/CineplexMovieComplex/Views/MovieComingSoons/Details.cshtml
+++ b/src/CineplexMovieComplex/Views/MovieComingSoons/Details.cshtml
@@ -15,9 +15,10 @@
         </dt>
         <dd>
             <img src="@Url.Content(@Html.DisplayTextFor(model => model.ImageUrl))" style="display:block; max-height:500px; max-width:300px; height:auto; width:auto;" />
+            <hr />
         </dd>
         <dt>
-            Name
+            Title
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Title)
@@ -31,5 +32,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-default" asp-action="Index">Back to List</a>
 </div>
