--- a/src/CineplexMovieComplex/Views/Movies/Details.cshtml
+++ b/src/CineplexMovieComplex/Views/Movies/Details.cshtml
@@ -11,31 +11,26 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ImageUrl)
+            Poster
         </dt>
         <dd>
             <img src="@Url.Content(@Html.DisplayTextFor(model => model.ImageUrl))" style="display:block; max-height:500px; max-width:300px; height:auto; width:auto;" />
+            <hr />
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Title)
+            Title
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Title)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.LongDescription)
+            Description
         </dt>
         <dd>
             @Html.DisplayFor(model => model.LongDescription)
         </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd>
-            $@Html.DisplayFor(model => model.Price)
-        </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-default" asp-action="Index">Back to List</a>
 </div>
