--- a/src/CineplexMovieComplex/Views/Movies/Index.cshtml
+++ b/src/CineplexMovieComplex/Views/Movies/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.ShortDescription)
             </td>
             <td>
-                <a asp-action="Details" asp-route-id="@item.MovieId">Details</a>
+                <a asp-action="Details" class="btn btn-default" asp-route-id="@item.MovieId">Details</a>
             </td>
         </tr>
 }
