Can only see available seats while booking. Renamed MovieBooking class and references to MovieTicket. Booking tickets not working. Can place booking, it links up but drop down list not returning selected index.

--- a/src/CineplexMovieComplex/Views/MovieTickets/Details.cshtml
+++ b/src/CineplexMovieComplex/Views/MovieTickets/Details.cshtml
@@ -1,4 +1,4 @@
-@model CineplexMovieComplex.Models.MovieBooking
+@model CineplexMovieComplex.Models.MovieTicket
 
 @{
     ViewData["Title"] = "Details";
@@ -7,12 +7,12 @@
 <h2>Details</h2>
 
 <div>
-    <h4>MovieBooking</h4>
+    <h4>MovieTicket</h4>
     <hr />
     <dl class="dl-horizontal">
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ReservationId">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.MovieTicketId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
