--- a/src/CineplexMovieComplex/Views/CineplexMovies/SelectSeat.cshtml
+++ b/src/CineplexMovieComplex/Views/CineplexMovies/SelectSeat.cshtml
@@ -6,48 +6,47 @@
 
 <h2>Select Seat</h2>
 
-<form asp-action="AddToCart">
-    <p class="form-horizontal">
-        <h4>Book seats for <b>@Html.DisplayFor(m => m.Movie.Title)</b></h4>
+@using (Html.BeginForm("Create", "MovieTickets", FormMethod.Post))
+{
+    @Html.AntiForgeryToken()
+    <h4>
+        Book seats for <b>@Html.DisplayFor(m => m.Movie.Title)</b>
+    </h4>
         <hr />
-        <div class="form-group" style="padding-bottom:2%;">
-            <label asp-for="Movie.Title" class="col-md-2 control-label"></label>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Movie.Title, new { @class = "col-md-2 control-label", @readonly = "readonly" })
             <div class="col-md-10">
-                <input asp-for="Movie.Title" class="form-control" readonly="readonly"/>
-                <span asp-validation-for="Movie.Title" class="text-danger" />
-            </div>
-        </div>
-        <div class="form-group" style="padding-bottom:2%;">
-            <label asp-for="Cineplex.Location" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Cineplex.Location" class="form-control" readonly="readonly" />
-                <span asp-validation-for="Cineplex.Location" class="text-danger" />
+                @Html.TextBoxFor(m => m.Movie.Title, new { @class = "form-control", @readonly = "readonly" })
+                @Html.ValidationMessageFor(m => m.Movie.Title)
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="ViewingTime" class="col-md-2 control-label" style="padding-bottom:2%";>Viewing Time</label>
+            @Html.LabelFor(m => m.Cineplex.Location, new { @class = "col-md-2 control-label", @readonly = "readonly" })
             <div class="col-md-10">
-                <input asp-for="ViewingTime" class="form-control" readonly="readonly"/>
-                <span asp-validation-for="ViewingTime" class="text-danger" />
+                @Html.TextBoxFor(m => m.Cineplex.Location, new { @class = "form-control", @readonly = "readonly" })
+                @Html.ValidationMessageFor(m => m.Cineplex.Location)
             </div>
         </div>
-        <hr />
-        <h3 style="padding-top:2%;">
-            Please select which seat(s) you wish to book.
-        </h3>
-        <div asp-validation-summary="ModelOnly" class="text-danger" style="padding-bottom:2%;"></div>
         <div class="form-group">
-            <label asp-for="Seat" class="col-md-2 control-label" style="padding-bottom:2%;">Seats Available</label>
+            @Html.LabelFor(m => m.ViewingTime, new { @class = "col-md-2 control-label", @readonly = "readonly" })
             <div class="col-md-10">
-                <select asp-for="Seat" class="form-control" style="height:200px;" asp-items="@(new SelectList(Model.Seat,"CombinedSeat","CombinedSeat"))"></select>
+                @Html.TextBoxFor(m => m.ViewingTime, new { @class = "form-control", @readonly = "readonly" })
+                @Html.ValidationMessageFor(m => m.ViewingTime)
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Seat, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(m => m.Seat, new SelectList(Model.Seat.Where(s => s.Reserved == false), "SeatId", "CombinedSeat"))
+                @Html.ValidationMessageFor(m => m.Seat)
             </div>
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Add to Ticket Machine" class="btn btn-default" />
+                <input type="submit" class="btn btn-default" value="Send" />
             </div>
         </div>
-</form>
+}
 
 <div>
     <a asp-action="Index">Back to List</a>
