--- a/src/CineplexMovieComplex/Views/MovieTickets/Create.cshtml
+++ b/src/CineplexMovieComplex/Views/MovieTickets/Create.cshtml
@@ -1,4 +1,4 @@
-@model CineplexMovieComplex.Models.MovieBooking
+@model CineplexMovieComplex.Models.MovieTicket
 
 @{
     ViewData["Title"] = "Create";
@@ -8,7 +8,7 @@
 
 <form asp-action="Create">
     <div class="form-horizontal">
-        <h4>MovieBooking</h4>
+        <h4>MovieTicket</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
