--- a/src/CineplexMovieComplex/Views/MovieTickets/Delete.cshtml
+++ b/src/CineplexMovieComplex/Views/MovieTickets/Delete.cshtml
@@ -1,4 +1,4 @@
-@model CineplexMovieComplex.Models.MovieBooking
+@model CineplexMovieComplex.Models.MovieTicket
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>MovieBooking</h4>
+    <h4>MovieTicket</h4>
     <hr />
     <dl class="dl-horizontal">
     </dl>
