--- a/src/CineplexMovieComplex/Views/MovieTickets/Edit.cshtml
+++ b/src/CineplexMovieComplex/Views/MovieTickets/Edit.cshtml
@@ -1,4 +1,4 @@
-@model CineplexMovieComplex.Models.MovieBooking
+@model CineplexMovieComplex.Models.MovieTicket
 
 @{
     ViewData["Title"] = "Edit";
@@ -8,10 +8,10 @@
 
 <form asp-action="Edit">
     <div class="form-horizontal">
-        <h4>MovieBooking</h4>
+        <h4>MovieTicket</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <input type="hidden" asp-for="ReservationId" />
+    <input type="hidden" asp-for="MovieTicketId" />
         <div class="form-group">
             <label asp-for="CartId" class="control-label col-md-2"></label>
             <div class="col-md-10">
