--- a/src/CineplexMovieComplex/Views/MovieTickets/Index.cshtml
+++ b/src/CineplexMovieComplex/Views/MovieTickets/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<CineplexMovieComplex.Models.MovieBooking>
+@model IEnumerable<CineplexMovieComplex.Models.MovieTicket>
 
 @{
     ViewData["Title"] = "Index";
@@ -19,9 +19,9 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ReservationId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ReservationId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ReservationId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.MovieTicketId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.MovieTicketId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.MovieTicketId">Delete</a>
             </td>
         </tr>
 }
