--- a/src/CineplexMovieComplex/Views/CineplexMovies/SelectSeat.cshtml
+++ b/src/CineplexMovieComplex/Views/CineplexMovies/SelectSeat.cshtml
@@ -43,7 +43,7 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" class="btn btn-default" value="Send" />
+                <input type="submit" class="btn btn-default" value="Reserve Ticket" />
             </div>
         </div>
 }
