--- a/src/CineplexMovieComplex/Views/MovieTickets/ViewCart.cshtml
+++ b/src/CineplexMovieComplex/Views/MovieTickets/ViewCart.cshtml
@@ -45,7 +45,11 @@
                 @Html.DisplayFor(modelItem => item.Seat.CombinedSeat)
             </td>
             <td>
-                <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.MovieTicketId">Remove</a>
+                @using (Html.BeginForm("Delete", "MovieTickets", new { id = item.MovieTicketId }, FormMethod.Post))
+                {
+                    <input type="submit" class="btn btn-danger" value="Remove" />
+                    //<a asp-controller="MovieTickets" asp-action="Delete" class="btn btn-danger" asp-route-id="@item.MovieTicketId">Remove</a>
+                }
             </td>
         </tr>
 }
