Added support for SecretManager (Google Login) Google Login now working. Apply database migration when you try. Will also have to add some code to the SecretJson, Ask for it when you do.

--- a/src/CineplexMovieComplex/Views/MovieTickets/ViewCart.cshtml
+++ b/src/CineplexMovieComplex/Views/MovieTickets/ViewCart.cshtml
@@ -19,7 +19,7 @@
 </script>
 
 <h2>Cart Details</h2>
-
+<a class="btn btn-success" asp-action="Checkout">Finalise Transaction</a>
 <table class="table">
     <thead>
         <tr>
