Google login connected to cart. Review purchase page completed. Removed local login. User prompted to google login when trying to purchase cart.

--- a/src/CineplexMovieComplex/Views/MovieTickets/ViewCart.cshtml
+++ b/src/CineplexMovieComplex/Views/MovieTickets/ViewCart.cshtml
@@ -4,22 +4,14 @@
     ViewData["Title"] = "Cart Details";
 }
 
-<script type="text/javascript" src="~/js/jquery.creditCardValidator.js">
-    $('#cc_number').validateCreditCard(function (result) {
-        alert('CC type: ' + result.card_type.name
-          + '\nLength validation: ' + result.length_valid
-          + '\nLuhn validation: ' + result.luhn_valid);
-    });
-
-    var result = $('#cc_number').validateCreditCard();
-
-    alert('CC type: ' + result.card_type.name
-      + '\nLength validation: ' + result.length_valid
-      + '\nLuhn validation: ' + result.luhn_valid);
-</script>
-
 <h2>Cart Details</h2>
-<a class="btn btn-success" asp-action="Checkout">Finalise Transaction</a>
+@{
+    if (Model.Any())
+    {
+        <a class="btn btn-success" asp-action="Checkout">Finalise Transaction</a>
+    }
+}
+
 <table class="table">
     <thead>
         <tr>
