--- a/src/CineplexMovieComplex/Views/Account/Login.cshtml
+++ b/src/CineplexMovieComplex/Views/Account/Login.cshtml
@@ -8,8 +8,9 @@
     ViewData["Title"] = "Log in";
 }
 
-<h2>@ViewData["Title"].</h2>
+<h2>@ViewData["Title"]</h2>
 <div class="row">
+    <!--
     <div class="col-md-8">
         <section>
             <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
@@ -54,9 +55,10 @@
             </form>
         </section>
     </div>
+    -->
     <div class="col-md-4">
         <section>
-            <h4>Use another service to log in.</h4>
+            <h4>Use <span style="color: red">Google</span> to log in</h4>
             <hr />
             @{
                 var loginProviders = SignInManager.GetExternalAuthenticationSchemes().ToList();
